# rag-chatbot-demo

./: .env.sample  .gitignore  Gradio_Langfuse_app.ipynb  Gradio_Langsmith_app.ipynb  Gradio_app.ipynb  Gradio_app.py  README.md  app.ipynb  app.py  chatbot.py  config.py  init_chroma_db.py  init_chroma_db_pdf_txt.py  prompts.py  pyproject.toml  rag_utils.py  replicate_new.py  requirements.txt  test.py  test_chroma_db.py
compsoft/: Compsoft_Gradio_RAG_app.ipynb  Compsoft_Gradio_RAG_app.py  Compsoft_RAG_Gradio_nohup.out  init_chroma_db.py
compsoft/flagged_data_points/: log.csv
ericsson/: Ericsson_Gradio_RAG_app.ipynb  Ericsson_Gradio_RAG_app.py  Gradio_Langfuse_app.ipynb  Gradio_app.ipynb  Gradio_app.py  init_chroma_db_pdf_txt.py  rag_utils.py
ericsson/flagged_data_points/: log.csv
magyartelekom/: MT_Gradio_RAG_app.ipynb  MT_Gradio_RAG_app.py  app.ipynb
mercedes/: MB_Gradio_Langfuse_app.ipynb  MB_Gradio_Langsmith_app.ipynb  MB_Gradio_RAG_app.py  MB_Gradio_app.ipynb  MB_Gradio_app.py  app.ipynb  app.py  init_chroma_db.py  prompts.py  rag_utils.py  test_chroma_db.py
nokia/: Nokia_Gradio_RAG_app.ipynb  Nokia_Gradio_RAG_app.py  RAG_nohup.out
src/: app.ipynb  app.py  chatbot.py  config.py  init_chroma_db.py  prompts.py  rag_utils.py  test.py
